--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "core-js": "^2.4.0",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "~0.6.12",
-    "reflect-metadata": "0.1.3"
+    "reflect-metadata": "0.1.3",
+    "bootstrap":"3.3.6"
   },
   "devDependencies": {
     "html-webpack-plugin": "^2.21.0",
@@ -26,6 +27,7 @@
     "typescript": "^1.8.10",
     "typings": "^1.3.1",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "html-loader": "^0.4.3"
   }
 }
