--- a/package.json
+++ b/package.json
@@ -3,31 +3,33 @@
   "version": "0.1.0",
   "scripts": {
     "build": "webpack --progress",
-    "build:prod": "webpack -p --progress",
+    "build:prod": "cross-env APP_ENVIRONMENT=production webpack -p --progress",
     "postinstall": "typings install",
-    "serve":"webpack-dev-server --inline --progress"
+    "serve": "webpack-dev-server --inline --progress"
   },
   "dependencies": {
-    "@angular/http": "2.0.0-rc.4",
     "@angular/common": "2.0.0-rc.4",
     "@angular/compiler": "2.0.0-rc.4",
     "@angular/core": "2.0.0-rc.4",
+    "@angular/http": "2.0.0-rc.4",
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
+    "bootstrap": "3.3.6",
     "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "~0.6.12",
+    "jquery": "^3.0.0",
     "reflect-metadata": "0.1.3",
-    "bootstrap":"3.3.6"
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "~0.6.12"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^2.21.0",
+    "cross-env": "1.0.8",
+    "html-webpack-plugin": "2.21.0",
+    "raw-loader": "0.5.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.1",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "html-loader": "^0.4.3"
+    "webpack-dev-server": "^1.14.1"
   }
 }
